<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
        android:id="@+id/textView4"
        android:layout_width="392dp"
        android:layout_height="47dp"
        android:layout_marginBottom="529dp"
        android:layout_marginTop="32dp"
        android:text="@string/favourites"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="386dp"
        android:layout_height="52dp"
        android:layout_marginBottom="474dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="1dp"
        android:text="@string/none"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="425dp"
        android:layout_marginEnd="216dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="216dp"
        android:layout_marginStart="10dp"
        android:text="@string/deleteAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>