<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/ingredientsYouHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="395dp"
        android:text="@string/ingredientsYouHave"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <EditText
        android:id="@+id/addIngredient"
        android:layout_width="207dp"
        android:layout_height="44dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:hint="@string/addIngredient"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsYouHave" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="62dp"
        android:layout_height="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="45dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addIngredient"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsYouHave" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="293dp"
        android:layout_height="243dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnsearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addIngredient"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>